--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,11 +20,12 @@ jobs:
           python-version: '3.10'
       - name: Install dependencies
         run: |
-          python -m pip install -r requirements-dev.txt
-          poetry --version
+          python -m pip install --upgrade pip
+          python -m pip install poetry
+          poetry install
       - name: Run tests and collect coverage
         run: |
-          nox -s pytest
+          poetry run nox -s pytest
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
