--- a/.github/workflows/mr-test.yml
+++ b/.github/workflows/mr-test.yml
@@ -28,7 +28,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install uv
+          python -m pip install -r requirements-dev.txt
+
+      # 缓存 Poetry 依赖
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-${{ matrix.python-version }}-
 
       # 缓存 nox 环境
       - name: Cache nox environments
@@ -39,13 +48,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nox-${{ matrix.python-version }}-
 
+      - name: Install project dependencies
+        run: |
+          poetry install --no-interaction
+          poetry lock
+
       - name: Lint
         run: |
-          uvx nox -s lint
+          poetry run nox -s lint
 
       - name: Test (Basic)
         run: |
-          uvx nox -s pytest
+          poetry run nox -s pytest
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -81,6 +95,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+      # 缓存 Poetry 依赖
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-3.10-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-3.10-
+
       # 缓存 nox 环境
       - name: Cache nox environments
         uses: actions/cache@v3
@@ -98,8 +121,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install uv
+          python -m pip install -r requirements-dev.txt
+          poetry install
 
       - name: Test (Real Package Tests)
         run: |
-          uvx nox -s pytest-real-packages
+          poetry run nox -s pytest-real-packages
