--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,7 +3,7 @@ name: Upload Python Package
 on:
   push:
     tags:
-      - "v*"
+      - "v*"  # 适配 Commitizen 的标签格式 v$version
 
 jobs:
   deploy:
@@ -19,27 +19,21 @@ jobs:
         token: "${{ secrets.GITHUB_TOKEN }}"
         fetch-depth: 0
         ref: main
-    - uses: olegtarasov/get-tag@v2.1.4
+    - uses: olegtarasov/get-tag@v2.1.3
       id: get_tag_name
       with:
-        tagRegex: "v(?<version>.*)"
+        tagRegex: "v(?<version>.*)"  # 提取不带 v 的版本号
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.x'
     - name: Install dependencies
-      shell: bash
       run: |
-        python -m pip install uv
-        uv venv
-        if [ "$RUNNER_OS" = "Windows" ]; then
-          source .venv/Scripts/activate
-        else
-          source .venv/bin/activate
-        fi
-        uv pip install -e .
-        uv --version
-        uv build
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements-dev.txt
+        poetry --version
+        poetry lock
+        poetry build
     # Note that we don't need credentials.
     # We rely on https://docs.pypi.org/trusted-publishers/.
     - name: Upload to PyPI
@@ -50,7 +44,7 @@ jobs:
       id: changelog
       uses: jaywcjlove/changelog-generator@main
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         filter-author: (|dependabot|renovate\[bot\]|dependabot\[bot\]|Renovate Bot)
         filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
         template: |
@@ -67,7 +61,7 @@ jobs:
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "dist/*"
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         body: |
           Comparing Changes: ${{ steps.changelog.outputs.compareurl }}
 
