--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,10 @@
+poetry>=1.7.0,<2.0.0
+virtualenv<20.25.0
+nox>=2023.4.22
 pytest>=7.0.0
-pytest-cov>=4.0.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.1
 ruff>=0.1.0
-black>=23.0.0
-twine>=4.0.0
-build>=1.0.0
-uv>=0.1.0
+isort>=5.12.0
+pre-commit>=3.5.0
+autoflake>=2.2.1
