--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ Issues = "https://github.com/loonghao/npm2rez/issues"
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.1.0"
-tag_format = "v$version"
+tag_format = "$version"
 version_files = [
     "pyproject.toml:version",
     "npm2rez/__init__.py"
