refactor(core, tests): Refactor environment settings and test cases
Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/workflows/mr-test.yml
+++ b/.github/workflows/mr-test.yml
@@ -120,4 +120,4 @@ jobs:
 
       - name: Test (Real Package Tests)
         run: |
-          poetry run nox -s pytest-real-packages
+          poetry run nox -s pytest
