--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,7 +3,7 @@ name: Upload Python Package
 on:
   push:
     tags:
-      - "[0-9]*.[0-9]*.[0-9]*"  # 适配不带 v 前缀的标签格式 $version
+      - "[0-9]*.[0-9]*.[0-9]*"
 
 jobs:
   deploy:
@@ -22,7 +22,7 @@ jobs:
     - uses: olegtarasov/get-tag@v2.1.4
       id: get_tag_name
       with:
-        tagRegex: "(?<version>.*)"  # 直接提取完整版本号
+        tagRegex: "(?<version>.*)"
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
